--- a/webApplicationPokemon/package.json
+++ b/webApplicationPokemon/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ngneat/error-tailor": "^2.2.1",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
     "rxjs": "~7.5.0",
