--- a/webApplicationPokemon/package.json
+++ b/webApplicationPokemon/package.json
@@ -11,11 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.1.0",
+    "@angular/cdk": "^14.2.0",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
     "@angular/localize": "^14.1.0",
+    "@angular/material": "^14.2.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
@@ -23,6 +25,7 @@
     "@ngneat/error-tailor": "^2.2.1",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
+    "material-icons": "^1.11.11",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
